syntax = "proto3";

service Greeter{
  rpc SayHello (HelloRequest) returns (HelloReply){}
}

message HelloRequest{
  string paraFoo=1;
  string paraBar=2;
  int32 paraHoo=3;
}

message HelloReply{
  string message=1;
}
